Got some of the basics down

--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SiliconBackOffice-13f8cfb6-3582-4293-bf8d-d99817a1e0be;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SiliconBackOffice-13f8cfb6-3582-4293-bf8d-d99817a1e0be;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LocalGraphQlApi": "http://localhost:7078/api/blazor_ia",
+    "GraphQlApi": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/blazor_ia?code=WbpUJojHuUmqumDWlP_DUtBUherT1ptFQ_OzLitnaN7qAzFu86O7Ow%3D%3D"
   },
   "Logging": {
     "LogLevel": {
