commit to let tema members see

--- a/SiliconBackOffice/SiliconBackOffice/SiliconBackOffice.csproj
+++ b/SiliconBackOffice/SiliconBackOffice/SiliconBackOffice.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="compilerconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SiliconBackOffice.Client\SiliconBackOffice.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.4" />
@@ -18,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\css\scss\" />
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
 </Project>
