--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -2,7 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SiliconBackOffice-13f8cfb6-3582-4293-bf8d-d99817a1e0be;Trusted_Connection=True;MultipleActiveResultSets=true",
     "LocalGraphQlApi": "http://localhost:7078/api/blazor_ia",
-    "GraphQlApi": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/blazor_ia?code=WbpUJojHuUmqumDWlP_DUtBUherT1ptFQ_OzLitnaN7qAzFu86O7Ow%3D%3D"
+    "GraphQlApi": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/blazor_ia?code=WbpUJojHuUmqumDWlP_DUtBUherT1ptFQ_OzLitnaN7qAzFu86O7Ow%3D%3D",
+    "LocalGraphQlBackEnd": "http://localhost:7078/api/graphql",
+    "GraphQlBackEnd": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/graphql?code=URe4f2YY8oD6aFxdpL5Z46LU91V4PTZMU9ItulYb6R9hAzFuoZpikA%3D%3D"
   },
   "Logging": {
     "LogLevel": {
