--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -5,13 +5,15 @@
     "GraphQlApi": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/blazor_ia?code=WbpUJojHuUmqumDWlP_DUtBUherT1ptFQ_OzLitnaN7qAzFu86O7Ow%3D%3D",
     "LocalGraphQlBackEnd": "http://localhost:7078/api/graphql",
     "GraphQlBackEnd": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/graphql?code=URe4f2YY8oD6aFxdpL5Z46LU91V4PTZMU9ItulYb6R9hAzFuoZpikA%3D%3D",
-    "SavedCoursesApi": "https://silicon-courses-webapi.azurewebsites.net/"
+    "SavedCoursesApi": "https://silicon-courses-webapi.azurewebsites.net/",
+    "LocalSavedCoursesApi": "https://localhost:7251/"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
+
