Updated Users to handle roles, delete and assign

--- a/SiliconBackOffice/SiliconBackOffice/SiliconBackOffice.csproj
+++ b/SiliconBackOffice/SiliconBackOffice/SiliconBackOffice.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
+    <Content Remove="wwwroot\css\scss\sections\_users_backoffice.scss" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\scss\sections\_users_backoffice.scss" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +28,7 @@
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
+    <None Include="wwwroot\css\scss\sections\_users_backoffice.scss" />
   </ItemGroup>
 
 </Project>
