--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -4,7 +4,8 @@
     "LocalGraphQlApi": "http://localhost:7078/api/blazor_ia",
     "GraphQlApi": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/blazor_ia?code=WbpUJojHuUmqumDWlP_DUtBUherT1ptFQ_OzLitnaN7qAzFu86O7Ow%3D%3D",
     "LocalGraphQlBackEnd": "http://localhost:7078/api/graphql",
-    "GraphQlBackEnd": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/graphql?code=URe4f2YY8oD6aFxdpL5Z46LU91V4PTZMU9ItulYb6R9hAzFuoZpikA%3D%3D"
+    "GraphQlBackEnd": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/graphql?code=URe4f2YY8oD6aFxdpL5Z46LU91V4PTZMU9ItulYb6R9hAzFuoZpikA%3D%3D",
+    "SubscribersDB": "Server=tcp:sqlserver-silicon-bmfl.database.windows.net,1433;Initial Catalog=verification_request_database;Persist Security Info=False;User ID=SqlAdmin;Password={Bytmig123!};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
