--- a/SiliconBackOffice/SiliconBackOffice/SiliconBackOffice.csproj
+++ b/SiliconBackOffice/SiliconBackOffice/SiliconBackOffice.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
+    <Content Remove="wwwroot\css\scss\sections\_subscribers_backoffice.scss" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +24,7 @@
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
+    <None Include="wwwroot\css\scss\sections\_subscribers_backoffice.scss" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +33,7 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Components\Pages\Subscribers.razor" />
+    <_ContentIncludedByDefault Remove="wwwroot\css\scss\sections\_subscribers_backoffice.scss" />
   </ItemGroup>
 
 </Project>
