saving before restart

--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -6,7 +6,11 @@
     "LocalGraphQlBackEnd": "http://localhost:7078/api/graphql",
     "GraphQlBackEnd": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/graphql?code=URe4f2YY8oD6aFxdpL5Z46LU91V4PTZMU9ItulYb6R9hAzFuoZpikA%3D%3D",
     "SavedCoursesApi": "https://silicon-courses-webapi.azurewebsites.net/",
-    "LocalSavedCoursesApi": "https://localhost:7251/"
+    "LocalSavedCoursesApi": "https://localhost:7251/",
+    //"LocalSignalRNegotiate": "http://localhost:7247/api/negotiate",
+    "AzureSignalRNegotiate": "Endpoint=https://silicon-bmfl.service.signalr.net;AccessKey=hYCfORjMsKnXRHB4+OvLzttmFkOlDX8PmyGqZYyRmds=;Version=1.0;"
+
+
   },
   "Logging": {
     "LogLevel": {
