--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -5,7 +5,10 @@
     "GraphQlApi": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/blazor_ia?code=WbpUJojHuUmqumDWlP_DUtBUherT1ptFQ_OzLitnaN7qAzFu86O7Ow%3D%3D",
     "LocalGraphQlBackEnd": "http://localhost:7078/api/graphql",
     "GraphQlBackEnd": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/graphql?code=URe4f2YY8oD6aFxdpL5Z46LU91V4PTZMU9ItulYb6R9hAzFuoZpikA%3D%3D",
-    "SubscribersDB": "Server=tcp:sqlserver-silicon-bmfl.database.windows.net,1433;Initial Catalog=verification_request_database;Persist Security Info=False;User ID=SqlAdmin;Password={Bytmig123!};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "SubscribersDB": "Server=tcp:sqlserver-silicon-bmfl.database.windows.net,1433;Initial Catalog=verification_request_database;Persist Security Info=False;User ID=SqlAdmin;Password={Bytmig123!};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "LocalSignalRMessage": "http://localhost:7247/api/broadcast",
+    "AzureSignalRNegotiate": "Endpoint=https://silicon-bmfl.service.signalr.net;AccessKey=hYCfORjMsKnXRHB4+OvLzttmFkOlDX8PmyGqZYyRmds=;Version=1.0;"
+
   },
   "Logging": {
     "LogLevel": {
@@ -13,5 +16,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Azure": {
+    "SignalR": {
+      "ConnectionString": "Endpoint=https://silicon-bmfl.service.signalr.net;AccessKey=hYCfORjMsKnXRHB4+OvLzttmFkOlDX8PmyGqZYyRmds=;Version=1.0;"
+    }
+  }
 }
