--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -1,16 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:silicon-blazorsql.database.windows.net,1433;Initial Catalog=silicon_blazor_users;Persist Security Info=False;User ID=SqlAdmin;Password=Password123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "LocalGraphQlApi": "http://localhost:7078/api/blazor_ia",
-    "GraphQlApi": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/blazor_ia?code=WbpUJojHuUmqumDWlP_DUtBUherT1ptFQ_OzLitnaN7qAzFu86O7Ow%3D%3D",
     "LocalGraphQlBackEnd": "http://localhost:7078/api/graphql",
-    "GraphQlBackEnd": "https://silicon-courseprovider-bmfl.azurewebsites.net/api/graphql?code=URe4f2YY8oD6aFxdpL5Z46LU91V4PTZMU9ItulYb6R9hAzFuoZpikA%3D%3D",
     "SavedCoursesApi": "https://silicon-courses-webapi.azurewebsites.net/",
     "LocalSavedCoursesApi": "https://localhost:7251/",
-    //"LocalSignalRNegotiate": "http://localhost:7247/api/negotiate",
-    "AzureSignalRNegotiate": "Endpoint=https://silicon-bmfl.service.signalr.net;AccessKey=hYCfORjMsKnXRHB4+OvLzttmFkOlDX8PmyGqZYyRmds=;Version=1.0;"
-
-
+    "LocalSignalRNegotiate": "http://localhost:7247/api/negotiate"
   },
   "Logging": {
     "LogLevel": {
