can get it to work.

--- a/SiliconBackOffice/SiliconBackOffice/appsettings.json
+++ b/SiliconBackOffice/SiliconBackOffice/appsettings.json
@@ -8,7 +8,8 @@
     "SavedCoursesApi": "https://silicon-courses-webapi.azurewebsites.net/",
     "LocalSavedCoursesApi": "https://localhost:7251/",
     //"LocalSignalRNegotiate": "http://localhost:7247/api/negotiate",
-    "AzureSignalRNegotiate": "Endpoint=https://silicon-bmfl.service.signalr.net;AccessKey=hYCfORjMsKnXRHB4+OvLzttmFkOlDX8PmyGqZYyRmds=;Version=1.0;"
+    //"AzureSignalRNegotiate": "Endpoint=https://silicon-bmfl.service.signalr.net;AccessKey=bcXNcG282xSJbAIreZlrVol52UigRfbaEI+F2lmRTGQ=;Version=1.0;",
+    "ConnectionCount": 10
 
 
   },
@@ -18,6 +19,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Azure": {
+    "SignalR": {
+      "Enabled": true,
+      "ConnectionString": "Endpoint=https://silicon-bmfl.service.signalr.net;AccessKey=bcXNcG282xSJbAIreZlrVol52UigRfbaEI+F2lmRTGQ=;Version=1.0;"
+    }
+  },
+  "Azure:SignalR:ServerStickyMode": "Required"
+
 }
 
